--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     <h1>Heading</h1>
+    <main>
+    <section>
+        <article></article>
+        <article></article>
+    </section>
+    </main>
 </body>
 </html>
